Implement placeholder matching